<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/loginConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.login.LoginActivity"
        android:background="@drawable/form_screen_background"
        android:paddingStart="40dp"
        android:paddingEnd="40dp">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:textSize="42sp"
            android:id="@+id/orderTotalPrice"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/emailTextInput"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="80dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputLabel"
            app:errorTextAppearance="@style/TextInputLabelErrorState"
            android:id="@+id/emailTextInput"
            app:layout_constraintTop_toBottomOf="@+id/orderTotalPrice"
            app:layout_constraintBottom_toTopOf="@+id/loginPasswordFrameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:errorEnabled="true">
        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/loginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>
    <FrameLayout
            android:id="@+id/loginPasswordFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/emailTextInput"
            app:layout_constraintBottom_toTopOf="@+id/useFingerprintButton"
            app:layout_constraintStart_toStartOf="@+id/emailTextInput"
            app:layout_constraintEnd_toEndOf="@+id/emailTextInput"
            android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passwordTextInput"
                android:theme="@style/TextInputLabel"
                app:errorTextAppearance="@style/TextInputLabelErrorState"
                app:errorEnabled="true">
            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
                android:id="@+id/showPasswordLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_show_password_white_24dp"/>
    </FrameLayout>
    <ImageButton
            android:id="@+id/useFingerprintButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@id/loginPasswordFrameLayout"
            app:layout_constraintBottom_toTopOf="@id/orderButton"
            app:layout_constraintStart_toStartOf="@+id/emailTextInput"
            app:layout_constraintEnd_toEndOf="@+id/emailTextInput"
            android:src="@drawable/ic_fingerprint_white_24dp"/>
    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/orderButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login"
            app:spinning_bar_color="@color/white"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp"
            style="@style/ButtonPrimaryStyle"
            android:background="@drawable/login_button_drawable"
            android:foreground="?selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@+id/useFingerprintButton"
            app:layout_constraintBottom_toTopOf="@+id/signUpTitle"
            app:layout_constraintStart_toStartOf="@+id/loginPasswordFrameLayout"
            app:layout_constraintEnd_toEndOf="@+id/loginPasswordFrameLayout"
            android:layout_marginTop="32dp">
    </br.com.simplepass.loading_button_lib.customViews.CircularProgressButton>
    <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/Register"
            android:textColor="@color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpTitle"
            app:layout_constraintStart_toStartOf="@+id/orderButton"
            app:layout_constraintEnd_toEndOf="@+id/orderButton">
    </Button>
    <TextView
            android:text="@string/sign_up_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpTitle"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/orderButton"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
            app:layout_constraintStart_toStartOf="@+id/orderButton"
            app:layout_constraintEnd_toEndOf="@+id/orderButton"
            android:layout_marginTop="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>