...
    <string name="order_error_message">Something went wrong. Try again, please!</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="sign_up_title">Don\'t have an account?</string>
    <string name="email_error">Invalid e-mail</string>
    <string name="password_error">Invalid password</string>
    <string name="unknown_error">Unknown error</string>
    <string name="incorrect_password_for_user">Incorrect password for this e-mail</string>
    <string name="incorrect_email_for_user">There is no user with such e-mail</string>
    <string name="registration">Registration</string>
    <string name="successfully_authorized">Successfully authorized!</string>
...
